# SEUsability_experiment_platform

./: README.md
challenges/: metrics.py  plotcfg.py  requirements.txt
challenges/rpc/: Makefile  README.md  base64.c  base64.h  compression.c  compression.h  encryption.c  encryption.h  flag  network.c  network.h  rpc.c  rpc.out  rpc.out.i64  solve.c  sort.c  sort.h  structures.h
challenges/secrets/: .gitignore  CMakeLists.txt  README.md  crypto.c  crypto.h  main.c  secrets.out  sort.c  sort.h  structures.h
infrastructure/: DESCRIPTION.md  README.md  dojo.yml  start_dojo.sh
infrastructure/dojo-desktop-files/: firefox.desktop  idapro.desktop  sublime.desktop
infrastructure/reallm-dojo/: DESCRIPTION.md  module.yml
infrastructure/reallm-dojo/challenge0/: .init  DESCRIPTION.md  README.md  warmup  warmup.c  warmup.i64
infrastructure/reallm-dojo/challenge1/: .init  README.md  secrets.out.i64
infrastructure/reallm-dojo/challenge2/: .init  DESCRIPTION.md  cfg.gv  rpc.out.i64
infrastructure/reallm-dojo/pilot_challenge/: DESCRIPTION.md  README.md
infrastructure/reallm-plugin/: README.md  setup.cfg
infrastructure/reallm-plugin/reallm/: __init__.py  __main__.py  installer.py  logger_conf.py  logging.py  reallm_aiapi.py  reallm_plugin.py
