[metadata]
name = reallm
version = attr: reallm.__version__
url = https://github.com/mahaloz/reallm-plugin
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
license = BSD 2 Clause
license_files = LICENSE
description = The plugin for the REaLLM human study
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
    libbs==2.9.1
    dailalib==3.15.6

python_requires = >= 3.10
include_package_data = True
packages = find:

[options.entry_points]
console_scripts =
    reallm = reallm.__main__:main

[options.extras_require]
test =
    pytest
    ipdb

